@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.1.15-cur, done by cs@nop.
--;-;-;2022-01-15 15:22:01, took 00:15:16, with 100 workers, on 2636 cases, 0 failed, 1 traces, 2 retries
+-;-;-;2022-01-15 15:35:00, took 00:06:37, with 100 workers, on 2634 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -1390,16 +1390,14 @@ http://sources.nop.hu/cfg/p4lang-crypt75.tst;p4lang-crypt75.tst;success;p4lang: 
 http://sources.nop.hu/cfg/p4lang-crypt76.tst;p4lang-crypt76.tst;success;p4lang: openvpn with aes256ecb
 http://sources.nop.hu/cfg/p4lang-crypt77.tst;p4lang-crypt77.tst;success;p4lang: openvpn with sha224
 http://sources.nop.hu/cfg/p4lang-crypt78.tst;p4lang-crypt78.tst;success;p4lang: openvpn with sha384
-http://sources.nop.hu/cfg/p4lang-crypt79.tst;p4lang-crypt79.tst;success;p4lang: openvpn with sha3224
-http://sources.nop.hu/cfg/p4lang-crypt80.tst;p4lang-crypt80.tst;success;p4lang: macsec with aes128cfb
-http://sources.nop.hu/cfg/p4lang-crypt81.tst;p4lang-crypt81.tst;success;p4lang: macsec with aes192cfb
-http://sources.nop.hu/cfg/p4lang-crypt82.tst;p4lang-crypt82.tst;success;p4lang: macsec with aes256cfb
-http://sources.nop.hu/cfg/p4lang-crypt83.tst;p4lang-crypt83.tst;success;p4lang: macsec with aes128ecb
-http://sources.nop.hu/cfg/p4lang-crypt84.tst;p4lang-crypt84.tst;success;p4lang: macsec with aes192ecb
-http://sources.nop.hu/cfg/p4lang-crypt85.tst;p4lang-crypt85.tst;success;p4lang: macsec with aes256ecb
-http://sources.nop.hu/cfg/p4lang-crypt86.tst;p4lang-crypt86.tst;success;p4lang: macsec with sha224
-http://sources.nop.hu/cfg/p4lang-crypt87.tst;p4lang-crypt87.tst;success;p4lang: macsec with sha384
-http://sources.nop.hu/cfg/p4lang-crypt88.tst;p4lang-crypt88.tst;success;p4lang: macsec with sha3224
+http://sources.nop.hu/cfg/p4lang-crypt79.tst;p4lang-crypt79.tst;success;p4lang: macsec with aes128cfb
+http://sources.nop.hu/cfg/p4lang-crypt80.tst;p4lang-crypt80.tst;success;p4lang: macsec with aes192cfb
+http://sources.nop.hu/cfg/p4lang-crypt81.tst;p4lang-crypt81.tst;success;p4lang: macsec with aes256cfb
+http://sources.nop.hu/cfg/p4lang-crypt82.tst;p4lang-crypt82.tst;success;p4lang: macsec with aes128ecb
+http://sources.nop.hu/cfg/p4lang-crypt83.tst;p4lang-crypt83.tst;success;p4lang: macsec with aes192ecb
+http://sources.nop.hu/cfg/p4lang-crypt84.tst;p4lang-crypt84.tst;success;p4lang: macsec with aes256ecb
+http://sources.nop.hu/cfg/p4lang-crypt85.tst;p4lang-crypt85.tst;success;p4lang: macsec with sha224
+http://sources.nop.hu/cfg/p4lang-crypt86.tst;p4lang-crypt86.tst;success;p4lang: macsec with sha384
 http://sources.nop.hu/cfg/p4lang-rout001.tst;p4lang-rout001.tst;success;p4lang: routing
 http://sources.nop.hu/cfg/p4lang-rout002.tst;p4lang-rout002.tst;success;p4lang: bridging
 http://sources.nop.hu/cfg/p4lang-rout003.tst;p4lang-rout003.tst;success;p4lang: mpls core
